@startuml Eventia-Classes-Reservation
title Diagramme de classes - Service Reservation
skinparam classAttributeIconSize 0
hide empty members

package "Service Reservation" {

  class ReservationController {
    - service : ReservationService
    + ReservationController(service)
    + list(req, res, next)
    + getById(req, res, next)
    + create(req, res, next)
    + cancel(req, res, next)
    + update(req, res, next)
    + reserve(req, res, next)
    + release(req, res, next)
    + remove(req, res, next)
  }

  class ReservationService {
    - repository : ReservationRepository
    - clientApi : IClientAPI
    - equipmentApi : IMaterielAPI
    - notificationApi : INotificationAPI
    + ReservationService(repository, apis)
    + list() : Promise<Object[]>
    + getById(id) : Promise<Object>
    + create(payload) : Promise<Object>
    + cancel(id) : Promise<Object>
    + update(id, payload) : Promise<Object>
    + reserveMore(id, quantity) : Promise<Object>
    + releaseSome(id, quantity) : Promise<Object>
    + remove(id) : Promise<boolean>
    - safeRelease(equipmentId, quantity)
    - {static} requireQuantity(quantity) : number
    - {static} day(date) : string
  }

  class ReservationRepository {
    - model : Model
    + ReservationRepository(model)
    + {static} isValidId(id) : boolean
    + findAll() : Promise<Document[]>
    + findById(id) : Promise<Document>
    + create(data) : Promise<Document>
    + update(id, data) : Promise<Document>
    + deleteById(id) : Promise<Document>
  }

  class Reservation {
    + {static} MS_PER_DAY : number
    + {static} STATUS : Object
    + id : string
    + clientId : string
    + clientName : string
    + clientEmail : string
    + equipmentId : string
    + equipmentName : string
    + dailyPrice : number
    + quantity : number
    + startDate : Date
    + endDate : Date
    + days : number
    + totalPrice : number
    + status : string
    + cancelledAt : Date
    + Reservation(data)
    + {static} fromDocument(document) : Reservation
    - {static} toDate(value) : Date
    - {static} toNumber(value, fallback) : number
    + durationInDays() : number
    + computeTotal(dailyPrice) : number
    + applyPricing(dailyPrice) : Reservation
    + applyClient(client) : Reservation
    + applyEquipment(equipment) : Reservation
    + cancel(at) : Reservation
    + isCancelled() : boolean
    + validate() : ValidationResult
    + isValid() : boolean
    + toPersistence() : Object
    + toJSON() : Object
  }
}

package "Services externes" {
  interface IClientAPI {
    + getById(id) : Promise<Object>
  }
  interface IMaterielAPI {
    + getById(id) : Promise<Object>
    + reserve(id, quantity) : Promise<Object>
    + release(id, quantity) : Promise<Object>
  }
  interface INotificationAPI {
    + create(notification) : Promise<Object>
  }

  class ClientApi {
    - http : AxiosInstance
    + ClientApi(baseUrl, timeout)
    + getById(id) : Promise<Object>
  }
  class EquipmentApi {
    - http : AxiosInstance
    + EquipmentApi(baseUrl, timeout)
    + getById(id) : Promise<Object>
    + reserve(id, quantity) : Promise<Object>
    + release(id, quantity) : Promise<Object>
    - {static} translate(error, message) : AppError
  }
  class NotificationApi {
    - http : AxiosInstance
    + NotificationApi(baseUrl, timeout)
    + create(notification) : Promise<Object>
  }

  IClientAPI <|.. ClientApi
  IMaterielAPI <|.. EquipmentApi
  INotificationAPI <|.. NotificationApi
}

ReservationController "1" --> "1" ReservationService : utilise
ReservationService "1" --> "1" ReservationRepository : utilise
ReservationService "1" ..> "0..*" Reservation : cree et valide
ReservationRepository "1" ..> "0..*" Reservation : persiste
ReservationService "1" ..> "1" IClientAPI : REST
ReservationService "1" ..> "1" IMaterielAPI : REST
ReservationService "1" ..> "1" INotificationAPI : REST

note bottom of Reservation
  duree = floor((fin - debut) / 86400000) + 1
  total = duree x quantite x prixQuotidien
  Le nom du client, le nom du materiel et le
  prix quotidien sont RECOPIES : chaque service
  possede sa propre base, aucune jointure
  n'est possible.
end note
@enduml
